auto-test/tests/chapter_18/invalid_types/invalid_incomplete_structs/incomplete_return_type_funcall.c
struct s;

struct s f(void);

int main(void) {
  f(); 
  return 0;
}